--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -1,6 +1,15 @@
 default:
     extension: .config
     output: themes
-colors-only:
+
+bar-colors:
+    extension: .config
+    output: bar-colors
+
+client-properties:
+    extension: .config
+    output: client-properties
+
+colors:
     extension: .config
     output: colors
